--- a/04-citamo-api/package.json
+++ b/04-citamo-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "citamo-treehouse-api",
+  "name": "citamo-api",
   "version": "1.0.0",
   "description": "Ucimo nodeJS",
   "main": "app.js",
