--- a/02-pravimo-ruter/package.json
+++ b/02-pravimo-ruter/package.json
@@ -2,10 +2,10 @@
   "name": "pravimo-server",
   "version": "1.0.0",
   "description": "Ucimo nodeJS",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "author": "Daman Daman",
   "license": "ISC",
