--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
         "prefer-const": "warn",
         "prefer-arrow-callback": "warn",
         "arrow-parens": ["warn", "as-needed"],
+        "arrow-body-style": ["warn", "as-needed"],
         "space-infix-ops": "warn",
         "comma-spacing": ["warn", { "before": false, "after": true }],
         "spaced-comment": ["warn", "always"],
