--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
-    "q": "^1.5.1"
+    "q": "^1.5.1",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.4"
   }
 }
