--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "q": "^1.5.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.4"
+  },
+  "dependencies": {
+    "mongoose": "^5.5.14"
   }
 }
